--- a/codecov.yml
+++ b/codecov.yml
@@ -1,17 +1,12 @@
-CODECOV_TOKEN=0f70a160-eb7a-4eea-a243-5b3c5cb458c5
-
-# Team Yaml
-coverage:
-  round: down
-  precision: 5
-
-# Repository Yaml
-coverage:
-  round: up
-  range: 0..10
-
-# Used in Codecov after updating
-coverage:
-  round: up
-  range: 0..10
-  precision: 5
+codecov:
+  token: '0f70a160-eb7a-4eea-a243-5b3c5cb458c5'
+  bot: "codecov-io"
+  ci:
+    - "travis.com"
+  strict_yaml_branch: "yaml-config"
+  max_report_age: 24
+  disable_default_path_fixes: no
+  require_ci_to_pass: yes
+  notify:
+    after_n_builds: 2
+    wait_for_ci: yes
