Fixed numpy install requires issue in setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = cs107_salad
-version = 0.0.777
+version = 0.0.71
 author = Neil Sehgal, Andrew Zhang, Diwei Zhang, Lotus Xia
 author_email = neil_sehgal@g.harvard.edu, andrew_zhang@college.harvard.edu, diwei_zhang@hsph.harvard.edu, lxia@g.harvard.edu
 description = Auto-Differentiation Program
@@ -19,8 +19,8 @@ package_dir =
     = src
 packages = find:
 python_requires = >=3.6
-install_requires=[
-          'numpy',
-      ]
+install_requires=
+          numpy
+
 [options.packages.find]
 where = src
